force-app/main/default/objects/Time_Sheet__c/fields/Allow_Automation_Update__c.field-meta.xml
<CustomField>
    <fullName>Allow_Automation_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Automation Update</label>
    <type>Checkbox</type>
</CustomField>