force-app/main/default/objects/Time_Sheet__c/fields/Appoval_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Appoval_Timestamp__c</fullName>
    <label>Appoval Timestamp</label>
    <type>DateTime</type>
</CustomField>