force-app/main/default/objects/Time_Sheet__c/fields/Approved_by_Employee__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Employee</label>
    <type>Checkbox</type>
</CustomField>