force-app/main/default/objects/Time_Sheet__c/fields/Days_Absent_Without_Pay__c.field-meta.xml
<CustomField>
    <fullName>Days_Absent_Without_Pay__c</fullName>
    <label>Days Absent Without Pay</label>
    <summaryFilterItems>
        <field>Attendance__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Absent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Compensation__c</field>
        <operation>equals</operation>
        <value>Unpaid Leave</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>