force-app/main/default/objects/Time_Sheet__c/fields/Days_with_Paid_Leave__c.field-meta.xml
<CustomField>
    <fullName>Days_with_Paid_Leave__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days with Paid Leave</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>