force-app/main/default/objects/Time_Sheet__c/fields/Days_with_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>Days_with_Sick_Leave__c</fullName>
    <label>Days with Sick Leave</label>
    <summaryFilterItems>
        <field>Attendance__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Absent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Absence_Category__c</field>
        <operation>equals</operation>
        <value>Sick Leave</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>