force-app/main/default/objects/Time_Sheet__c/fields/Default_Hours_in_Workday__c.field-meta.xml
<CustomField>
    <fullName>Default_Hours_in_Workday__c</fullName>
    <defaultValue>7.5</defaultValue>
    <label>Default Hours in Workday</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>