force-app/main/default/objects/Time_Sheet__c/fields/Employee_Approval_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Employee_Approval_Overdue__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(Approval_Status__c, &quot;Approved&quot;),
    ISPICKVAL(Approval_Status__c, &quot;Pending Manager Approval&quot;)
  ),
  FALSE,
  TODAY() &gt;= (DATE(
    YEAR(Month_Year__c),
    MONTH(Month_Year__c) + 1,
    1
  ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Approval Overdue</label>
    <type>Checkbox</type>
</CustomField>