force-app/main/default/objects/Time_Sheet__c/fields/Employee_Country__c.field-meta.xml
<CustomField>
    <fullName>Employee_Country__c</fullName>
    <label>Employee Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>