force-app/main/default/objects/Time_Sheet__c/fields/Employee_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employee_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee&apos;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>