force-app/main/default/objects/Time_Sheet__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <formula>TEXT( Employee__r.Employment_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Status</label>
    <type>Text</type>
</CustomField>