force-app/main/default/objects/Time_Sheet__c/fields/Full_Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Full_Work_Day__c</fullName>
    <label>Full Work Day</label>
    <summaryFilterItems>
        <field>Attendance__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Present</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>