force-app/main/default/objects/Time_Sheet__c/fields/Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ved afafkrydsning godkender jeg, at ovenstående registrering af arbejdstid for indeværende måned er korrekt.</inlineHelpText>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>