force-app/main/default/objects/Time_Sheet__c/fields/Is_Time_Sheet_from_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Time_Sheet_from_Last_Month__c</fullName>
    <formula>YEAR(TODAY()) = YEAR( Month_Year__c ) &amp;&amp;
MONTH(TODAY()) = MONTH(Month_Year__c) + 1
||
(MONTH(TODAY()) = 1 &amp;&amp; MONTH(Month_Year__c) = 12 &amp;&amp; YEAR(TODAY()) = YEAR(Month_Year__c) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Time Sheet from Last Month</label>
    <type>Checkbox</type>
</CustomField>