force-app/main/default/objects/Time_Sheet__c/fields/Largest_Negative_Work_Hour_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Largest_Negative_Work_Hour_Deviation__c</fullName>
    <label>Largest Negative Work Hour Deviation</label>
    <summarizedField>Time_Sheet_Correction__c.Deviation_in_Work_Hours__c</summarizedField>
    <summaryForeignKey>Time_Sheet_Correction__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>