force-app/main/default/objects/Time_Sheet__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>Employee__r.Manager__r.FirstName  &amp; &quot; &quot; &amp;  Employee__r.Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>