force-app/main/default/objects/Time_Sheet__c/fields/Manager_SFID__c.field-meta.xml
<CustomField>
    <fullName>Manager_SFID__c</fullName>
    <formula>Employee__r.Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager SFID</label>
    <type>Text</type>
</CustomField>