force-app/main/default/objects/Time_Sheet__c/fields/Number_of_Corrections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Corrections__c</fullName>
    <inlineHelpText>This field counts the number of related Time Sheet Corrections.</inlineHelpText>
    <label>Number of Corrections</label>
    <summaryForeignKey>Time_Sheet_Correction__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>