force-app/main/default/objects/Time_Sheet__c/fields/Number_of_Days_Arrived_Late__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Arrived_Late__c</fullName>
    <label>Number of Days Arrived Late</label>
    <summaryFilterItems>
        <field>Time_Sheet_Correction__c.Type__c</field>
        <operation>equals</operation>
        <value>Arrived Late</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Sheet_Correction__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>