force-app/main/default/objects/Time_Sheet__c/fields/Other_Absence_Days__c.field-meta.xml
<CustomField>
    <fullName>Other_Absence_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Absence Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>