force-app/main/default/objects/Time_Sheet__c/fields/Potential_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Potential_Work_Days__c</fullName>
    <defaultValue>21</defaultValue>
    <label>Potential Work Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>