force-app/main/default/objects/Time_Sheet__c/fields/Potential_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Potential_Work_Hours__c</fullName>
    <formula>Potential_Work_Days__c * Default_Hours_in_Workday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Works Days&quot; (the number of work days this month * Default Hours in a Work Day for this Employee</inlineHelpText>
    <label>Potential Work Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>