force-app/main/default/objects/Time_Sheet__c/fields/Rejected_by_Employee__c.field-meta.xml
<CustomField>
    <fullName>Rejected_by_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected by Employee</label>
    <type>Checkbox</type>
</CustomField>