force-app/main/default/objects/Time_Sheet__c/fields/Rejection_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Timestamp__c</fullName>
    <label>Rejection Timestamp</label>
    <type>DateTime</type>
</CustomField>