force-app/main/default/objects/Time_Sheet__c/fields/Relation_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Employee__c</fullName>
    <formula>IF(
    Employee__r.Manager__c = $User.Id,
    &quot;Manager&quot;,
    IF(
        Employee__r.Supervisor__c = $User.Id,
        &quot;Supervisor&quot;,
        IF(
            Employee__r.SF_User__c = $User.Id,
            &quot;Me&quot;,
            &quot;None&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Notes the relationship to the employee, of the user currently looking at it, based on what&apos;s selected in &quot;Manager&quot;, &quot;Supervisor&quot; and &quot;SF User&quot; on the Employee record.</inlineHelpText>
    <label>Relation to Employee</label>
    <type>Text</type>
</CustomField>