force-app/main/default/objects/Time_Sheet__c/fields/Required_to_Approve_Time_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Required_to_Approve_Time_Sheets__c</fullName>
    <formula>Employee__r.Required_to_Approve_Time_Sheets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required to Approve Time Sheets</label>
    <type>Checkbox</type>
</CustomField>