force-app/main/default/objects/Time_Sheet__c/fields/Sum_of_Work_Hour_Deviations__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Work_Hour_Deviations__c</fullName>
    <inlineHelpText>Calculates the sum of all &quot;Deviations in Work Hours&quot; noted on Time Sheet Corrections.</inlineHelpText>
    <label>Sum of Work Hour Deviations</label>
    <summarizedField>Time_Sheet_Correction__c.Deviation_in_Work_Hours__c</summarizedField>
    <summaryForeignKey>Time_Sheet_Correction__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>