force-app/main/default/objects/Time_Sheet__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <formula>Employee__r.Supervisor__r.FirstName &amp; &quot; &quot; &amp;  Employee__r.Supervisor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor</label>
    <type>Text</type>
</CustomField>