force-app/main/default/objects/Time_Sheet__c/fields/Supervisor_SFID__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_SFID__c</fullName>
    <formula>Employee__r.Supervisor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor SFID</label>
    <type>Text</type>
</CustomField>