force-app/main/default/objects/Time_Sheet__c/fields/Template_Time_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Template_Time_Sheet__c</fullName>
    <formula>Employee__r.Template_Employee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Time Sheet</label>
    <type>Checkbox</type>
</CustomField>