force-app/main/default/objects/Time_Sheet__c/fields/Total_Absence_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Absence_Days__c</fullName>
    <label>Total Absence Days</label>
    <summaryFilterItems>
        <field>Attendance__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Absent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Absence_Category__c</field>
        <operation>notEqual</operation>
        <value>Default Work Schedule</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>