force-app/main/default/objects/Time_Sheet__c/fields/Vacation_Days__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vacation Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>