force-app/main/default/objects/Time_Sheet__c/validationRules/Ensure_First_Day_of_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_First_Day_of_Month</fullName>
    <active>true</active>
    <errorConditionFormula>DAY(Month_Year__c) &lt;&gt; 1</errorConditionFormula>
    <errorDisplayField>Month_Year__c</errorDisplayField>
    <errorMessage>You must set the date to the first of the selected month</errorMessage>
</ValidationRule>