force-app/main/default/objects/Time_Sheet__c/listViews/My_Time_Sheets.listView-meta.xml
<ListView>
    <fullName>My_Time_Sheets</fullName>
    <columns>NAME</columns>
    <columns>Month_Year__c</columns>
    <columns>Default_Hours_in_Workday__c</columns>
    <columns>Employee__c</columns>
    <columns>Potential_Work_Days__c</columns>
    <columns>Days_with_Paid_Leave__c</columns>
    <columns>Other_Absence_Days__c</columns>
    <columns>Sick_Days__c</columns>
    <columns>Vacation_Days__c</columns>
    <columns>Relation_to_Employee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Relation_to_Employee__c</field>
        <operation>equals</operation>
        <value>Me</value>
    </filters>
    <label>My Time Sheets</label>
</ListView>