force-app/main/default/objects/Time_Sheet__c/listViews/Overdue_Time_Sheets.listView-meta.xml
<ListView>
    <fullName>Overdue_Time_Sheets</fullName>
    <columns>NAME</columns>
    <columns>Market_Unit__c</columns>
    <columns>Month_Year__c</columns>
    <columns>Employee__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Approval_Overdue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Employment_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Template_Time_Sheet__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Required_to_Approve_Time_Sheets__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Overdue Time Sheets</label>
</ListView>