force-app/main/default/objects/Time_Sheet__c/listViews/Time_Sheets_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Time_Sheets_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Market_Unit__c</columns>
    <columns>Month_Year__c</columns>
    <columns>Employee__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending Employee Approval,Pending Manager Approval</value>
    </filters>
    <label>Time Sheets Pending Approval</label>
</ListView>